--- a/.github/workflows/release-create.yml
+++ b/.github/workflows/release-create.yml
@@ -48,60 +48,12 @@ jobs:
         uses: gittools/actions/gitversion/execute@v4.1.0
 
       - run: |
-          echo "FullSemVer (env.fullSemVer)            : ${{ env.fullSemVer }}"
-        name: Display GitVersion variables (without prefix)
-
-      - run: |
-          echo "FullSemVer (env.GitVersion_FullSemVer) : ${{ env.GitVersion_FullSemVer }}"
-        name: Display GitVersion variables (with prefix)
-
-      - run: |
-          echo "FullSemVer (steps.version_step.outputs.fullSemVer)            : ${{ steps.version_step.outputs.fullSemVer }}"
-        name: Display GitVersion outputs (step output without prefix)
-
-      - run: |
-          echo "FullSemVer (steps.version_step.outputs.GitVersion_FullSemVer) : ${{ steps.version_step.outputs.GitVersion_FullSemVer }}"
-        name: Display GitVersion outputs (step output with prefix)
-
-      - run: |
-          echo "FullSemVer (env.myvar_fullSemVer)            : ${{ env.myvar_fullSemVer }}"
-        name: Display mapped local env (outputs without prefix)
-        env:
-          myvar_fullSemVer: ${{ steps.version_step.outputs.fullSemVer }}
-
-      - run: |
-          echo "FullSemVer (env.myvar_GitVersion_FullSemVer) : ${{ env.myvar_GitVersion_FullSemVer }}"
-        name: Display mapped local env (outputs with prefix)
-        env:
-          myvar_GitVersion_FullSemVer: ${{ steps.version_step.outputs.GitVersion_FullSemVer }}
-
-      - run: |
-          echo "FullSemVer (env.myvar_fullSemVer)            : $env:myvar_fullSemVer"
-        name: Display mapped local env (pwsh - outputs without prefix)
-        shell: pwsh
-        env:
-          myvar_fullSemVer: ${{ steps.version_step.outputs.fullSemVer }}
-
-      - run: |
-          echo "FullSemVer (env.myvar_GitVersion_FullSemVer) : $env:myvar_GitVersion_FullSemVer"
-        name: Display mapped local env (pwsh - outputs with prefix)
-        shell: pwsh
-        env:
-          myvar_GitVersion_FullSemVer: ${{ steps.version_step.outputs.GitVersion_FullSemVer }}
-
-      - run: |
-          echo "FullSemVer (myvar_fullSemVer)            : $myvar_fullSemVer"
-        name: Display mapped local env (bash - outputs without prefix)
+          echo "BASE_VERSION  : $BASE_VERSION"
+          echo "FULL_VERSION            : $FULL_VERSION"
         shell: bash
         env:
-          myvar_fullSemVer: ${{ steps.version_step.outputs.fullSemVer }}
-
-      - run: |
-          echo "FullSemVer (myvar_GitVersion_FullSemVer) : $myvar_GitVersion_FullSemVer"
-        name: Display mapped local env (bash - outputs with prefix)
-        shell: bash
-        env:
-          myvar_GitVersion_FullSemVer: ${{ steps.version_step.outputs.GitVersion_FullSemVer }}
+          BASE_VERSION: ${{ steps.version_step.outputs.MajorMinorPatch }}
+          FULL_VERSION: ${{ steps.version_step.outputs.SemVer }}
 
       # - name: Validate version-bump input
       #   run: |
